fix: full overflow fix

--- a/sgo/login/style.css
+++ b/sgo/login/style.css
@@ -40,7 +40,7 @@
 
 a {
     text-decoration: none;
-   color: var(--main--tag--a);
+    color: var(--main--tag--a);
 }
 
 .line {
@@ -62,16 +62,15 @@ a {
 body {
     background: var(--main--background);
     color: var(--main--text);
-    font-family: var(--main--font);
+    font-family: var(--main--font), serif;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
     transition: .7s;
 }
 
 a {
-    font-family: var(--main--font);
+    font-family: var(--main--font), serif;
     transition: .7s;
 }
 
@@ -153,7 +152,7 @@ a {
     background: var(--main--button);
     border: 2px solid var(--main--border);
     color: var(--main--text);
-    font-family: var(--main--font);
+    font-family: var(--main--font), serif;
     margin-top: 15px;
     transition: .5s;
 
@@ -171,7 +170,7 @@ a {
 .login__input button {
     padding: 13px;
     border-radius: 15px;
-    font-family: var(--main--font);
+    font-family: var(--main--font), serif;
     background: var(--button-background);
     color: var(--button-text);
     border: none;
@@ -309,7 +308,6 @@ a {
     width: 100%;
     border: solid 1px transparent;
     border-radius: 15px;
-    transition: .3s;
     font-family: var(--main--font), serif;
     font-weight: 600;
     color: #403c3c;
@@ -341,10 +339,10 @@ a {
 
 @keyframes authCircleAnimation {
     0% {
-     top: -11em;
-     left: -11em;
-     transform: scale(1);
- }
+        top: -11em;
+        left: -11em;
+        transform: scale(1);
+    }
     50% {
         top: 11em;
         left: 11em;
